--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,7 @@
     "input",
     "js",
     "placeholder",
-    "tooltip",
-    "error"
+    "tooltip"
   ],
   "license": "MIT",
   "homepage": "http://github.com/electerious/basicPlaceholder",
