--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basicPlaceholder",
+  "name": "basicplaceholder",
   "version": "1.1.0",
   "authors": [
     "Tobias Reich <tobias.reich.ich@gmail.com>"
