--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "gulp-autoprefixer": "2.3.1",
     "gulp-babel": "^5.1.0",
     "gulp-concat": "^2.5.2",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-css": "^1.1.5",
+    "gulp-load-plugins": "^1.0.0-rc",
+    "gulp-minify-css": "^1.1.6",
     "gulp-sass": "^2.0.1",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.5"
