--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "basicPlaceholder",
   "version": "1.2.0",
   "authors": [
-    "Tobias Reich <tobias.reich.ich@gmail.com>"
+    "Tobias Reich <tobias@electerious.com>"
   ],
   "description": "Easy-to-use persistent placeholders for input fields",
   "main": "dist/basicPlaceholder.min.js",
