--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "etc"
   ],
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "@electerious/basictasks": "^1.0.0"
+    "@electerious/basictasks": "^1.0.0",
+    "gulp": "^3.9.0"
   }
 }
