--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "package.json"
   ],
   "license": "MIT",
-  "homepage": "http://github.com/electerious/basicPlaceholder",
+  "homepage": "https://github.com/electerious/basicPlaceholder",
   "repository": {
     "type": "git",
     "url": "https://github.com/electerious/basicPlaceholder.git"
