--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "compile": "gulp"
   },
   "license": "MIT",
-  "homepage": "http://github.com/electerious/basicPlaceholder",
+  "homepage": "https://github.com/electerious/basicPlaceholder",
   "repository": {
     "type": "git",
     "url": "https://github.com/electerious/basicPlaceholder.git"
